--- a/stylus/_b-page.styl
+++ b/stylus/_b-page.styl
@@ -1,7 +1,7 @@
 /* Обвязка */
 html, body
   height: 100%
-  font: normal 16px "Arial", Verdana, Tahoma
+  font: normal 16px "Open Sans Condensed", Verdana, Tahoma
 
 .b-page
   position: relative
