--- a/stylus/_b-sidebar.styl
+++ b/stylus/_b-sidebar.styl
@@ -1,1 +1,49 @@
 /* Сайдбар */
+.b-sidebar
+  position: absolute
+  top: 0
+  bottom: 0
+  left: 0
+  width: 300px
+  background: #ffcc00
+
+  &__header
+    position: relative
+    top: 100px
+    left: -120px
+    color: #fff
+    font-size: (42/16)*1em
+    -webkit-transform: rotate(-90deg)
+    -moz-transform: rotate(-90deg)
+    -ms-transform: rotate(-90deg)
+    -o-transform: rotate(-90deg)
+    transform: rotate(-90deg)
+
+  &__list
+    margin: 30px 0 0 150px
+    padding: 0
+    list-style: none
+    font-size: (25/16)*1em
+
+  &__item
+    margin: 0 0 5px
+
+  &__link
+    position: relative
+    color: #fff
+    text-decoration: none
+
+    &:hover, &_state_active
+      color: #000
+
+    &_state_active
+
+      &:after
+        position: absolute
+        top: 0
+        left: 140%
+        display: block
+        width: 40px
+        height: 40px
+        background: url(../img/b-sidebar/arrow.png) no-repeat 0 0
+        content: ""
