--- a/stylus/style.styl
+++ b/stylus/style.styl
@@ -16,6 +16,9 @@
 /* Основной контент */
 @import "_b-main.styl"
 
+/* Карточка студента */
+@import "_b-student.styl"
+
 /* Подвал */
 @import "_b-footer.styl"
 
