--- a/stylus/_b-main.styl
+++ b/stylus/_b-main.styl
@@ -29,6 +29,8 @@
     margin-right: 10px
     width: 100px
     height: 100px
+    background-position: center
+    background-size: 120px
     -webkit-border-radius: 50%
     -moz-border-radius: 50%
     border-radius: 50%
