Добавлена разметка и логика для страниц "Карточка лектора" и "Список лекторов"

--- a/stylus/_b-main.styl
+++ b/stylus/_b-main.styl
@@ -29,11 +29,11 @@
     margin-right: 10px
     width: 100px
     height: 100px
-    background-position: center
-    background-size: 120px
     -webkit-border-radius: 50%
     -moz-border-radius: 50%
     border-radius: 50%
+    background-position: center
+    background-size: 120px
 
   &__name
     color: #000
@@ -41,5 +41,19 @@
   &__text
     font-size: (20/16)*1em
 
+    p
+      margin: 10px 0
+
     a
       color: #000
+
+  &__video
+    float: right
+    margin-top: 15px
+    width: 480px
+    height: 270px
+
+    iframe
+      width: 480px
+      height: 270px
+      border: 0
