--- a/stylus/style.styl
+++ b/stylus/style.styl
@@ -19,6 +19,9 @@
 /* Карточка студента */
 @import "_b-student.styl"
 
+/* Карточка лектора */
+@import "_b-lecturer.styl"
+
 /* Подвал */
 @import "_b-footer.styl"
 
