Добавлены шаблоны и логика для страниц "Список лекций" и "Карточка лекции"

--- a/stylus/style.styl
+++ b/stylus/style.styl
@@ -22,6 +22,12 @@
 /* Карточка лектора */
 @import "_b-lecturer.styl"
 
+/* Список лекций */
+@import "_b-lectures.styl"
+
+/* Карточка лекции */
+@import "_b-lecture.styl"
+
 /* Подвал */
 @import "_b-footer.styl"
 
